--- a/server/package.json
+++ b/server/package.json
@@ -12,19 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "colors": "^1.4.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "mongoose": "^8.2.2",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.7",
-    "nodemailer-express-handlebars": "^6.1.0",
-    "openssl-nodejs": "^1.0.5",
-    "path": "^0.12.7",
-    "pdf-lib": "^1.17.1",
-    "socket.io": "^4.7.2",
-    "uuid": "^9.0.1",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "fs": "^0.0.1-security",
@@ -34,9 +28,15 @@
     "joi-password-complexity": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
-    "cookie-parser": "^1.4.6",
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2"
+    "mongoose": "^8.2.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "nodemailer-express-handlebars": "^6.1.0",
+    "openssl-nodejs": "^1.0.5",
+    "path": "^0.12.7",
+    "pdf-lib": "^1.17.1",
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
